--- a/Projektarbete/Index.html
+++ b/Projektarbete/Index.html
@@ -6,7 +6,8 @@
     <link href="indexstyle.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body>
-
+  
+	
     <div class="headernavbar">
         <ul id="header">
           <li><a href="#sus">About Us</a></li>
@@ -15,8 +16,22 @@
           <li><a href="#ultramegasus">4</a></li>
         </ul>
 	</div>
+	
+	
+	<div id="searchbar" >
+		<form action="testinput.php" method="POST">
+		<textarea id="submittext" name="submittext" rows=5 cols=50></textarea><br>
+		<input type="submit" value="Submit"><br>
+    
+		</form>
+	</div>
+	
+	
+
 	  <div id="bg-img">
 			<div class="blur"></div>
 	</div>
+	
+	
   </body>
 </html>
