Uppdaterad searchbar + anant
Tycker vi typ blurrar bakgrundsbilden i photoshop om vi inte kan ha hela blurrad bara. Blir lite jobbigt annars. Vi borde fixa den bättre responsive också!

--- a/Projektarbete/Index.html
+++ b/Projektarbete/Index.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lego Search</title>
     <link href="indexstyle.css" media="screen" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-  
-	
+</head>
+
+<body>
+
+
     <div class="headernavbar">
         <ul id="header">
-          <li><a href="#sus">About Us</a></li>
-          <li><a href="#moresus">Help</a></li>
-          <li><a href="#megasus">3</a></li>
-          <li><a href="#ultramegasus">4</a></li>
-        </ul>
-	</div>
-	
-	
-	<div id="searchbar" >
-		<form action="testinput.php" method="POST">
-		<textarea id="submittext" name="submittext" rows=5 cols=50></textarea><br>
-		<input type="submit" value="Submit"><br>
-    
-		</form>
-	</div>
-	
-	
 
-	  <div id="bg-img">
-			<div class="blur"></div>
-	</div>
-	
-	
-  </body>
+            <li><a href="#sus">About Us</a></li>
+            <li><a href="#moresus">Help</a></li>
+            <li><a href="#megasus">3</a></li>
+            <li><a href="#ultramegasus">4</a></li>
+        </ul>
+    </div>
+
+
+    <div class="searchbar">
+        <form action="testinput.php" method="POST">
+            <input type="text" placeholder="Search for your parts here...">
+            <button type="submit"><i class="buttonsearch"></i></button>
+    </div>
+    </form>
+    </div>
+
+
+
+    <div id="bg-img">
+        <div class="blur-size"></div>
+
+    </div>
+
+
+</body>
+
 </html>
