--- a/Projektarbete/Index.html
+++ b/Projektarbete/Index.html
@@ -14,10 +14,13 @@
     <div class="headernavbar">
         <ul id="header">
 
-            <li><a href="#sus">About Us</a></li>
-            <li><a href="#moresus">Help</a></li>
-            <li><a href="#megasus">3</a></li>
-            <li><a href="#ultramegasus">4</a></li>
+            <li class="text"><a href="#sus"> About Us</a></li>
+            <li id="lego">
+                <a href="#suse"><img src="legobit.png" alt="Picture couldn´t be laoded" style="width: 3vw;height:3vw;"></a>
+            </li>
+            <li class="text"><a href="#moresus">Help</a></li>
+
+
         </ul>
     </div>
 
