test på help bar

--- a/Projektarbete/Index.html
+++ b/Projektarbete/Index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lego Search</title>
     <link href="indexstyle.css" media="screen" rel="stylesheet" type="text/css" />
+    <script src="javaprojekt.js"></script>
 </head>
 
 <body>
-
-
     <div class="headernavbar">
         <ul id="header">
 
@@ -32,9 +31,13 @@
             <button type="submit"><i class="buttonsearch"></i></button>
     </div>
     </form>
+
+    <div onclick="dropdown()">
+        <button class="accordion">Section 1</button>
+        <div class="panel">
+            <p>Lorem ipsum...</p>
+        </div>
     </div>
-
-
 
     <div id="bg-img">
         <div class="blur-size"></div>
