--- a/Projektarbete/Index.html
+++ b/Projektarbete/Index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <div class="headernavbar">
         <ul id="header">
 
@@ -25,24 +26,33 @@
     </div>
 
 
+
     <div class="searchbar">
         <form action="testinput.php" method="POST">
             <input type="text" placeholder="Search for your parts here...">
-            <button type="submit"><i class="buttonsearch"></i></button>
-    </div>
-    </form>
+            <button class="search" type="submit"><i class="buttonsearch"></i></button>
+        </form>
+        <div class="help">
+            <button class="accordion" onclick="dropdown()">How to search</button>
 
-    <div onclick="dropdown()">
-        <button class="accordion">Section 1</button>
-        <div class="panel">
-            <p>Lorem ipsum...</p>
+            <div class="panel">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sit amet ultrices tellus. Etiam pharetra lectus at purus pharetra finibus. Phasellus at commodo nisi, sit amet convallis nibh. Duis et pretium metus. Sed malesuada dapibus
+                    risus, a venenatis ex placerat ac. Maecenas luctus magna sed sodales tempor. Nulla tincidunt ac odio ac auctor. Praesent ut nulla mi. Sed accumsan, nibh at semper tincidunt, turpis risus porttitor sem, quis fermentum nisl lorem accumsan
+                    magna. Curabitur venenatis, lectus et feugiat tempus, sapien ipsum elementum lectus, id eleifend sapien ex vitae libero. Duis nibh sapien, congue nec pulvinar eget, tincidunt ac arcu. Donec cursus volutpat risus ac semper. In tortor
+                    dolor, consectetur vitae porta nec, auctor ac lectus.</p>
+            </div>
+
         </div>
     </div>
+
 
     <div id="bg-img">
         <div class="blur-size"></div>
 
     </div>
+
+
+
 
 
 </body>
